--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
             <li class="menu-item-has-children"> <a href="#" class="home">Home</a>
               <ul class="sub-menu">
                 <li> <a href="index.html">Home One</a> </li>
-                <li> <a href="index2.html">Home Two</a> </li>
-                <li> <a href="index3.html">Home Three</a> </li>
+              <!--  <li> <a href="index2.html">Home Two</a> </li>
+                <li> <a href="index3.html">Home Three</a> </li>-->
               </ul>
             </li>
             <li> <a href="#about-us">About Us</a></li>
@@ -1165,22 +1165,22 @@
       <h3 class="sec-sub-title">Our Latest Specials & Events</h3>
       <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
         <div class="inner first-content-text">
-          <div class="images-left"> <a href="event-single.html"> <img src="images/event/2.jpg" alt=""></a> </div>
+          <div class="images-left"> <a href="#"> <img src="images/event/2.jpg" alt=""></a> </div>
           <div class="content-left">
             <h4>SUMMER SOJU BOGO SPECIAL</h4>
             <span class="date"><i class="fa fa-calendar" aria-hidden="true"></i> 21 June 2019</span> <span class="time"><i class="fa fa-clock-o" aria-hidden="true"></i> 10.30-03.30</span>
-            <p> In celebration for the first day of Summer, buy one soju bottle, get another for free! This special is applicable to all flavors. </p>
-            <a href="event.html">View All Specials & Events <i class="fa fa-angle-double-right" aria-hidden="true"></i></a> </div>
+            <p> In celebration for the first day of Summer, buy one soju bottle, get another for free! This special is applicable to all flavors. </p></div>
+         
         </div>
       </div>
       <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
         <div class="inner">
-          <div class="images-left"> <a href="event-single.html"> <img src="images/event/1.jpg" alt=""></a> </div>
+          <div class="images-left"> <a href="#"> <img src="images/event/1.jpg" alt=""></a> </div>
           <div class="content-left">
             <h4>SOJUba GOES OUTDOORS</h4>
             <span class="date"><i class="fa fa-calendar" aria-hidden="true"></i> 1 June 2019</span> <span class="time"><i class="fa fa-clock-o" aria-hidden="true"></i> 05.00-02.00</span>
             <p>On June 1st, SOJUba will be opening the side doors and everyone will be able to dine-in outdoors! Please tell your Hosts for your seating preference. </p>
-            <a href="event.html">View All Event <i class="fa fa-angle-double-right" aria-hidden="true"></i></a> </div>
+           </div>
         </div>
       </div>
     </div>
@@ -1339,7 +1339,7 @@
 <!-- Footer Area Section End Here --> 
 
 <!-- STYLE SWITCH START -->
-
+<!--
 <div class="style-switch right" id="switch-style"> <a id="toggle-switcher" class="switch-button" title="Change Styles"> <i class="fa fa-cog fa-spin fa-3x fa-fw"></i> </a>
   <div class="switched-options">
     <h4 class="preset-title">Presets Color</h4>
@@ -1356,7 +1356,7 @@
     </ul>
   </div>
 </div>
-
+-->
 <!-- all js here --> 
 
 <script src="js/jquery.min.js"></script>
