--- a/index.html
+++ b/index.html
@@ -191,10 +191,10 @@
                   <h2 class="sec-title">Our Menus</h2>
                   <h3 class="sec-sub-title">Find Our Menu</h3>
                   <div id="filters" class="button-group">
-                      <button class="btn btn-primary active" data-filter=".appetizers"><i class="flaticon-food"></i>Appetizers</button>
-                      <button class="btn btn-primary active1" data-filter=".entrees"><i class="flaticon-breakfast-1"></i>Entrees</button>
-                      <button class="btn btn-primary active1" data-filter=".specials"><i class="flaticon-food-1"></i>Specials</button>
-                      <button class="btn btn-primary active1" data-filter=".drinks"><i class="flaticon-food-2"></i>Drinks</button>
+                      <button class="btn btn-primary active" data-filter=".lunch"><i class="flaticon-food"></i>Appetizers</button>
+                      <button class="btn btn-primary active1" data-filter=".breakfast"><i class="flaticon-breakfast-1"></i>Entrees</button>
+                      <button class="btn btn-primary active1" data-filter=".dinner"><i class="flaticon-food-1"></i>Specials</button>
+                      <button class="btn btn-primary active1" data-filter=".dessert"><i class="flaticon-food-2"></i>Drinks</button>
                   </div>          
                   <div class="menu-page">
                       <div id="posts" class="row">
