--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <nav class="rs-menu">
           <ul class="nav-menu">
             <li class="menu-item-has-children"> <a href="#" class="home">Home</a>
-              <ul class="sub-menu">
+              <!--<ul class="sub-menu">
                 <li> <a href="index.html">Home One</a> </li>
               <!--  <li> <a href="index2.html">Home Two</a> </li>
                 <li> <a href="index3.html">Home Three</a> </li>-->
