--- a/index.html
+++ b/index.html
@@ -109,13 +109,8 @@
       <div class="row margin"> <a class="rs-menu-toggle"><i class="fa fa-bars"></i>Menu</a>
         <nav class="rs-menu">
           <ul class="nav-menu">
-            <li class="menu-item-has-children"> <a href="#" class="home">Home</a>
-              <!--<ul class="sub-menu">
-                <li> <a href="index.html">Home One</a> </li>
-              <!--  <li> <a href="index2.html">Home Two</a> </li>
-                <li> <a href="index3.html">Home Three</a> </li>-->
-              </ul>
-            </li>
+        
+			   <li> <a href="#home">Home</a></li>
             <li> <a href="#about-us">About Us</a></li>
             <li> <a href="#menu">Menu</a></li>
             <li> <a href="#reservation">Reservation</a></li>
